# hypervis

./: CMakeLists.txt
src/: algebra.cpp  algebra.hpp  draw.cpp  draw.hpp  geometry.cpp  geometry.hpp  hyper.cpp  hyper.hpp  main.cpp  main.hpp
